--- a/index.org
+++ b/index.org
@@ -2994,6 +2994,317 @@ categories:
 
 #+end_src
 
+** 2014-04-14-using-morpho-for-cataloguing-personal-research-data-blog
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2014-04-14-using-morpho-for-cataloguing-personal-research-data.md :exports none :eval no :padline no
+  ---
+  name: 2014-04-14-using-morpho-for-cataloguing-personal-research-data
+  layout: post
+  title: Using Morpho for Cataloguing Personal Research Data
+  date: 2014-04-14
+  categories:
+  - Data Documentation
+  ---
+#+end_src  
+** 2014-04-14-using-r-and-morpho-for-cataloguing-my-personal-research-data-org
+*** Introduction
+
+The collection of scientific data is undertaken at an individual level
+by everybody in their own way. The layout of data collections that I
+have seen is incredibly varied; spread across multiple files and folders which can
+be difficult to navigate or search through. In some cases
+these collections are incomprehensible to all but the individual themselves. Given
+that a lot of projects are collaborative in nature and require
+extensive sharing, it is important that scientists maintain their
+data collection by some form of system that allows easy data extraction and
+use in other projects. Therefore, the maintenance of a personal catalogue of datasets is an
+important activity for scientists.
+
+By cataloguing I mean that a file or database is kept that stores all the
+information about the names of the datasets (and any other files the
+data may be spread across), where the datasets are located, any
+references (papers) that were developed from it and finally
+important information regarding the conditions it
+was formed under.
+
+While this may seem laborious, it keeps track of all the data that one
+has collected over time and gives one a reference system to find a
+dataset of interest when sharing with collaborators. Datasets can be
+saved in any filing system the scientist chooses, but with the help of
+their personal data catalogue they will always know the status of
+their data collection.
+
+*** Cataloguing Personal Research Data with Morpho
+
+[Metacat](https://knb.ecoinformatics.org/knb/docs/intro.html) is an
+online repository for data and metadata. It is a great resource for
+the publication of data, but not very useful for an individual
+scientist to use on their personal computer.  However
+[Morpho](https://knb.ecoinformatics.org/#tools/morpho) the Metadata
+Editor used by Metacat may be used locally by a researcher to
+catalogue their collection (and ultimately this will make publishing
+elements of the collection easier.)  Morpho uses the Ecological
+Metadata Language (EML) to author metadata with a graphical user
+interface wizard.
+
+I am using morpho 1.8 due to my group using older metacat server.
+
+*** How Morpho Works
+
+When you install Morpho it creates a directory where you can run the
+program from, and another hidden directory called ".morpho" for it's
+database of all your metadata (and optionally any data you import to
+it).  Below is an image of mine, with a couple of test records I
+played around with (the XMLs/HTMLs) and a dataset I imported (the text
+file).
+
+- ~/.morpho/profiles/hanigan/data/hanigan/
+
+![morphodir1](/images/morphodir1.png)
+  
+Every time a modification is made to the metadata a new XML is saved here, with the major number being the ID of the package and incremented minor number to reflect the change.
+
+The GUI is tedious.
+
+
+*** Adding a dataset from my collection
+
+I have already got a good amount of metadata I generated when I published [the drought data](http://dx.doi.org/10.4225/13/50BBFD7E6727A)
+
+*** the drought dataset:
+    Hanigan, Ivan (2012): Monthly drought data for Australia 1890-2008
+    using the Hutchinson Drought Index. Australian National University Data Commons.
+    DOI: 10.4225/13/50BBFD7E6727A. 
+
+<p></p>
+
+*** Step One: define the project that I will keep locally
+
+- This is the Github repo https://github.com/swish-climate-impact-assessment/DROUGHT-BOM-GRIDS
+- I store this locally at ~/data/DROUGHT-BOM-GRIDS
+
+*** Contextual Metadata
+
+*** Abstract
+
+I originally wrote the abstract as the description for a RIF-CS metadata object to publish for the ANU library.
+
+I got the following instructions from a Librarian: The "informative abstract" method.
+
+- The abstract should be a descriptive of the data, not the research.
+- Briefly outline the relevant project or study and describe the contents of the data package. 
+- Include geographic location, the primary objectives of the study, what data was collected (species or phenomena), the year range the data was collected in, and collection frequency if applicable.
+- Describe methodology techniques or approaches only to the degree necessary for comprehension – don’t go into any detail.
+- Cite references and/or links to any publications that are related to the data package.
+- Single paragraph
+- 200-250 words
+- Use active voice and past tense.
+- Use short complete sentences.
+- Express terms in both their abbreviated and spelled out form for search retrieval purposes.
+
+*** Australian FOR codes
+ANZSRC-FOR Codes: Australian and New Zealand Standard Research Classification – Fields of Research codes allow R&D activity to be categorised according to the methodology used in the R&D, rather than the activity of the unit performing the R&D or the purpose of the R&D.  
+http://www.abs.gov.au/Ausstats/abs@.nsf/Latestproducts/4AE1B46AE2048A28CA25741800044242?opendocument
+
+*** GCMD Keywords
+Olsen, L.M., G. Major, K. Shein, J. Scialdone, S. Ritz, T. Stevens, M. Morahan, A. Aleman, R. Vogel, S. Leicester, H. Weir, M. Meaux, S. Grebas, C.Solomon, M. Holland, T. Northcutt, R. A. Restrepo, R. Bilodeau, 2013. NASA/Global Change Master Directory (GCMD) Earth Science Keywords. Version 8.0.0.0.0 
+http://gcmd.nasa.gov/learn/keyword_list.html
+
+*** Geographic coverage
+    # I developed the following function to take a spatial object and convert it to the bounding box
+    > require(devtools)
+    > install_github("disentangle", "ivanhanigan")
+    > require(disentangle)
+    > morpho_bounding_box(d)
+                      X1                 X2                 X3
+    1               <NA> 10.1356954574585 S               <NA>
+    2 112.907211303711 E               <NA> 158.960372924805 E
+    3               <NA> 54.7538909912109 S               <NA>
+
+
+*** Save the metadata
+
+- the metadata is now ready to save to my .morpho catalogue
+- without importing any data
+
+![morphoimg2.png](/images/morphoimg2.png)
+
+- this appears as a new XML
+
+![morphoimg3.png](/images/morphoimg3.png)
+
+- which looks like this
+
+![morphoimg4.png](/images/morphoimg4.png)
+
+*** Additional Metadata 
+
+As this is metadata only about the dataset, it is innapropriate to refer to related publications etc in these elements.  Luckily EML has the additionalMetadata and additionalLinks fields.  Just open the XML and paste the following in the bottom.
+
+    <additionalMetadata>
+      <metadata>
+        <additionalLinks>
+          <url name="Hanigan, IC, Butler, CD, Kokic, PN, Hutchinson, MF. Suicide and Drought in New South Wales, Australia, 1970-2007. Proceedings of the National Academy of Science USA 2012, vol. 109 no. 35 13950-13955, doi: 10.1073/pnas.1112965109">http://dx.doi.org/10.1073/pnas.1112965109</url>
+        </additionalLinks>
+      </metadata>
+    </additionalMetadata>
+
+You can see this if you then open it up again in morpho and then under the documentation menu go to Add/Edit Documentation.
+
+![morphoimg5.png](/images/morphoimg5.png)
+
+*** Adding the data location 
+    https://im.lternet.edu/node/1119
+    This element is found at these locations (XPath):
+    /eml:eml/dataset/distribution
+    /eml:eml/dataset/[entity]/physical/distribution 
+     
+    The <distribution> element appears at the dataset and entity
+    levels and contains information on how the data described in the
+    EML document can be accessed. The <distribution> element has one
+    of three children for describing the location of the resource:
+    <online>, <offline>, and <inline>.
+     
+    Offline Data: Use the <offline> element to describe restricted
+    access data or data that is not available online. The minimum that
+    should be included is the <mediumName> tag, if using the <offline>
+    element.
+     
+    Inline Data: The <inline> element contains data that is stored
+    directly within the EML document. Data included as text or string
+    will be parsed as XML. If data are not to be parsed, encode them
+    as “CDATA sections,” by surrounding them with
+    “<![CDATA[“ and “]]>” tags.
+     
+    Online Data: The <online> element has two sub elements, <url>, and
+    <onlineDescription> (optional).  <url> tags may have an optional
+    attribute named function, which may be set to either “download” or
+    “information”. If the URL provides only information about
+    downloading the object but does not directly return the data
+    stream, then the function attribute should be set to
+    "information". If accessing the URL directly returns the data
+    stream, then the function attribute should be set to "download".
+    If the function attribute is omitted, then "download" is implied
+
+*** Backing up and restoring your Morpho catalogue
+
+- one option is metacat, but requires overhead of install/manage that server too
+- just copy the .morpho folder to your backup drive
+- test on another machine by install morpho
+- copy .morpho to my ~/ drive
+- start morpho
+- next time want to test backups or bring this up to sync just overwrite .morpho and restart morpho?
+
+- test upgrading to morpho 1.10, just use uninstaller (tools/morpho1.8/Uninstaller, java -jar uninstaller.jar) then install newer version
+  
+  
+  
+  
+  
+** 2014-04-xx-using-morpho-for-cataloguing-postgis-servers-org
+*** Adding regarding the Data Location and Backups
+  
+These data are quite large and also geospatial, so I store these 
+on a PostGIS server at the ANU library. The original data are stored
+on a PostGIS server at NCEPH and the code I used to compute the
+indices is on github.  So all I want to do with Morpho is document the
+data, not import it.
+*** notes
+https://knb.ecoinformatics.org/#external//emlparser/docs/eml-2.1.1/./eml-physical.html#PhysicalDistributionType
+PhysicalDistributionType 
+	
+Content of this field: 	Description of this field:
+Elements: 	Use: 	How many:
+A choice of (
+A sequence of (
+A choice of (
+online	required	
+OR
+offline	required	
+OR
+inline	required	
+)
+access	optional	
+)
+OR
+res:ReferencesGroup	 	 
+)
+Attributes: 	Use: 	Default Value:
+id	optional
+system	optional
+scope	optional	document
+	
+
+    The PhysicalDistributionType contains the information required for retrieving the resource.
+
+    It differs from the
+    res:DistributionType
+    :
+
+    Generally, the PhysicalDisribtutionType is intended for download whereas the Type at the resource level is intended primarily for information.
+
+    The phys:PhysicalDistributionType includes an optional access tree which can be used to override access rules applied at the resource level. Access for the documents included entities can then be managed individually.
+
+    Also see individual sub elements for more information.
+
+
+
+    and
+    https://im.lternet.edu/node/1119
+    This element is found at these locations (XPath):
+    /eml:eml/dataset/distribution
+    /eml:eml/dataset/[entity]/physical/distribution 
+     
+    The <distribution> element appears at the dataset and entity
+    levels and contains information on how the data described in the
+    EML document can be accessed. The <distribution> element has one
+    of three children for describing the location of the resource:
+    <online>, <offline>, and <inline>.
+     
+    Offline Data: Use the <offline> element to describe restricted
+    access data or data that is not available online. The minimum that
+    should be included is the <mediumName> tag, if using the <offline>
+    element.
+     
+    Inline Data: The <inline> element contains data that is stored
+    directly within the EML document. Data included as text or string
+    will be parsed as XML. If data are not to be parsed, encode them
+    as “CDATA sections,” by surrounding them with
+    “<![CDATA[“ and “]]>” tags.
+     
+    Online Data: The <online> element has two sub elements, <url>, and
+    <onlineDescription> (optional).  <url> tags may have an optional
+    attribute named function, which may be set to either “download” or
+    “information”. If the URL provides only information about
+    downloading the object but does not directly return the data
+    stream, then the function attribute should be set to
+    "information". If accessing the URL directly returns the data
+    stream, then the function attribute should be set to "download".
+    If the function attribute is omitted, then "download" is implied
+     
+    An EML dataset should include at least one URL; at a minimum, this
+    should be at the <dataset> level (XPath:
+    /eml:eml/dataset/distribution/url), and may point to an
+    application or website. This <url> function attribute can be set
+    to either “information” or “download”.  However, a URL at the
+    entity level (e.g, a dataTable at
+    /eml:eml/dataset/dataTable/physical/distribution/url) should
+    stream data to the requesting application and should include an
+    attribute function with the value “download”.  In other words, at
+    the entity level, the URL should lead directly to the data and not
+    to a data catalog or intended-use page. For more information about
+    describing a URL connection, see the EML documentation online.
+     
+    When used at the entity level, an alternative tag is available to
+    <url>, <connection>. This element is discussed under data
+    entities, below.
+     
+    As of EML 2.1, there is also an optional <access> element in a
+    <distribution> tree at the data entity level
+    (/eml:eml/dataset/[entity]/physical/distribution/access). This
+    element is intended specifically for controlling access to the
+    data entity itself. For more information on the <access> tree, see
+    above, under the general access discussion.
+
 * Exploratory Data Analysis
 * General Purpose
 * Visualisation
